[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tc_prometheus"
version = "4.0.0"
license = "MIT"
license-files = ["LICENSE"]
authors = [{name = "Simon Effenberg", email = "savar@schuldeigen.de"}]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Operating System :: MacOS", "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3"
]
description = "Thumbor Prometheus metrics extension"
readme = "README.md"
dependencies = ["prometheus_client==0.*,>=0.14.1", "thumbor==7.*,>=7.7.5"]

[project.optional-dependencies]
all = ["prometheus_client==0.*,>=0.14.1", "thumbor==7.*,>=7.7.5"]
tests = ["preggy==1.*,>=1.4.4", "prometheus_client==0.*,>=0.14.1", "pytest-cov==5.*,>=5.0.0", "pytest==8.*,>=8.0.0", "thumbor==7.*,>=7.7.5"]
